--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules
+vue.config.js
 
 # local env files
 .env.local
@@ -18,5 +19,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw*
-=======
-node_modules
